Add Webpack config

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -10,7 +10,7 @@
         "https://github.com/*"
       ],
       "js": [
-        "/contentscript.js"
+        "bundle.js"
       ],
       "run-at": "document_idle"
     }
