--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "typescript": "^2.1.5"
   },
   "devDependencies": {
+    "css-loader": "^0.26.1",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.8.0",
+    "stylelint-config-standard": "^16.0.0",
     "webpack": "^2.2.1"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   }
 }
