--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "style-loader": "^0.13.1",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
+    "ts-loader": "^2.0.0",
     "webpack": "^2.2.1"
   },
   "stylelint": {
