--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
     "ts-loader": "^2.0.0",
+    "tslint": "^4.4.2",
     "webpack": "^2.2.1"
   },
   "stylelint": {
