--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,15 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "jsx": "react",
-    "allowJs": true
-  }
+    "allowJs": true,
+    "lib": ["es2015", "dom"]
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
