--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "github-injection": "^0.3.0",
     "lodash": "^4.17.4",
     "raven-js": "^3.14.0",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.61",
+    "@types/react": "^15.0.21",
+    "@types/react-dom": "^0.14.23",
     "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.8.0",
