--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,13 +4,17 @@
   "version": "0.0.1",
   "description": "Intelli Octo",
   "homepage_url": "https://github.com/pd4d10/intelli-octo",
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
       "matches": [
         "https://github.com/*"
       ],
       "js": [
-        "github.bundle.js"
+        "github.js"
       ],
       "run-at": "document_idle"
     },
@@ -19,7 +23,7 @@
         "https://gitlab.com/*"
       ],
       "js": [
-        "gitlab.bundle.js"
+        "gitlab.js"
       ],
       "run-at": "document_idle"
     }
