--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^2.1.5"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.44",
     "@types/lodash": "^4.14.61",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^0.14.23",
