Add BitBucket support

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -26,6 +26,15 @@
         "gitlab.js"
       ],
       "run-at": "document_idle"
+    },
+    {
+      "matches": [
+        "https://bitbucket.org/*"
+      ],
+      "js": [
+        "bitbucket.js"
+      ],
+      "run-at": "document_idle"
     }
   ]
 }
