--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "typescript": "^2.1.5"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^3.1.2",
     "css-loader": "^0.26.1",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
-    "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
     "webpack": "^2.2.1"
   },
