--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Intelli Octo",
+  "name": "IntelliOcto",
   "version": "0.0.1",
-  "description": "Intelli Octo",
+  "description": "IntelliSense for GitHub, GitLab and Bitbucket",
   "homepage_url": "https://github.com/pd4d10/intelli-octo",
   "background": {
     "scripts": ["background.js"]
