--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.2",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
