--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -5,7 +5,10 @@
   "description": "IntelliSense for GitHub, GitLab and Bitbucket",
   "homepage_url": "https://github.com/pd4d10/intelli-octo",
   "background": {
-    "scripts": ["dist/background.js"]
+    "scripts": [
+      "dist/sentry.js",
+      "dist/background.js"
+    ]
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
@@ -14,6 +17,7 @@
         "https://github.com/*"
       ],
       "js": [
+        "dist/sentry.js",
         "dist/github.js"
       ],
       "run-at": "document_idle"
@@ -23,6 +27,7 @@
         "https://gitlab.com/*"
       ],
       "js": [
+        "dist/sentry.js",
         "dist/gitlab.js"
       ],
       "run-at": "document_idle"
@@ -32,6 +37,7 @@
         "https://bitbucket.org/*"
       ],
       "js": [
+        "dist/sentry.js",
         "dist/bitbucket.js"
       ],
       "run-at": "document_idle"
