--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack -dw",
     "build": "webpack --config webpack.config.production.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo TODO"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
     "tslint": "^4.4.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.3.1"
   }
 }
