--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "awesome-typescript-loader": "^3.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
+    "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
     "tslint": "^4.4.2",
