--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,9 +1,12 @@
 {
   "manifest_version": 2,
   "name": "IntelliOcto",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "IntelliSense for GitHub, GitLab and Bitbucket",
   "homepage_url": "https://github.com/pd4d10/intelli-octo",
+  "icons": {
+    "128": "icon.png"
+  },
   "background": {
     "scripts": [
       "dist/sentry.js",
