--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "dependencies": {
     "@types/chrome": "^0.0.44",
     "@types/lodash": "^4.14.61",
+    "@types/node": "^7.0.12",
     "github-injection": "^0.3.0",
     "lodash": "^4.17.4",
     "preact": "^8.1.0",
     "raven-js": "^3.14.0",
-    "typescript": "^2.1.5",
+    "typescript": "^2.2.2",
     "vscode-css-languageservice": "^2.0.0",
     "vscode-html-languageservice": "^2.0.1",
     "vscode-languageserver-types": "^3.2.0"
