--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^2.2.2",
     "vscode-css-languageservice": "^2.0.0",
     "vscode-html-languageservice": "^2.0.1",
+    "vscode-json-languageservice": "^2.0.7",
     "vscode-languageserver-types": "^3.2.0"
   },
   "devDependencies": {
