--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   },
   "homepage": "https://github.com/pd4d10/intelli-octo",
   "dependencies": {
+    "@types/angular": "^1.6.17",
     "@types/chrome": "^0.0.46",
+    "@types/jquery": "^2.0.45",
     "@types/lodash": "^4.14.61",
     "@types/node": "^7.0.12",
+    "@types/react": "^15.0.24",
+    "@types/safari-extension": "^0.0.27",
+    "@types/safari-extension-content": "^0.0.14",
     "github-injection": "^0.3.0",
     "lodash": "^4.17.4",
     "preact": "^8.1.0",
