--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es5",
     "jsx": "react",
     "jsxFactory": "h",
+    "strictNullChecks": true,
     "allowJs": true,
     "lib": ["es2015", "dom"]
   },
