--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "IntelliOcto",
-  "version": "1.2.0",
+  "name": "Intelli-Octo",
+  "version": "1.3.0",
   "description": "IntelliSense for GitHub, GitLab and Bitbucket",
   "homepage_url": "https://github.com/pd4d10/intelli-octo",
   "icons": {
