--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "intelli-octo",
   "private": true,
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "IntelliSense for GitHub, GitLab and Bitbucket",
   "scripts": {
     "start": "webpack -w",
     "build": "webpack --config webpack.config.production.js",
-    "package": "cd chrome/; cp ../LICENSE ./; zip -r ../extension.zip ./; rm LICENSE; cd ../",
+    "package-chrome": "cd chrome/; cp ../LICENSE ./; zip -r ../chrome.zip ./; rm LICENSE; cd ../",
+    "package-safari": "cd intelli-octo.safariextension/; cp ../LICENSE ./; zip -r ../intelli-octo.safariextension.zip ./; rm LICENSE; cd ../",
+    "package": "npm run package-chrome && npm run package-safari",
     "test": "tslint src"
   },
   "repository": {
