--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "Intelli-octo",
+  "name": "Octohint",
   "version": "1.3.0",
   "description": "IntelliSense for GitHub, GitLab and Bitbucket",
-  "homepage_url": "https://github.com/pd4d10/intelli-octo",
+  "homepage_url": "https://github.com/pd4d10/octohint",
   "icons": {
     "128": "icon.png"
   },
