--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intelli-octo",
+  "name": "octohint",
   "private": true,
   "version": "1.3.0",
   "description": "IntelliSense for GitHub, GitLab and Bitbucket",
@@ -7,21 +7,21 @@
     "start": "webpack -w",
     "build": "webpack --config webpack.config.production.js",
     "package-chrome": "cd chrome/; cp ../LICENSE ./; zip -r ../chrome.zip ./; rm LICENSE; cd ../",
-    "package-safari": "cd intelli-octo.safariextension/; cp ../LICENSE ./; zip -r ../intelli-octo.safariextension.zip ./; rm LICENSE; cd ../",
+    "package-safari": "cd octohint.safariextension/; cp ../LICENSE ./; zip -r ../octohint.safariextension.zip ./; rm LICENSE; cd ../",
     "package": "npm run package-chrome && npm run package-safari",
     "test": "tslint src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pd4d10/intelli-octo.git"
+    "url": "git+https://github.com/pd4d10/octohint.git"
   },
   "keywords": [],
   "author": "pd4d10 <pd4d10@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pd4d10/intelli-octo/issues"
+    "url": "https://github.com/pd4d10/octohint/issues"
   },
-  "homepage": "https://github.com/pd4d10/intelli-octo",
+  "homepage": "https://github.com/pd4d10/octohint",
   "dependencies": {
     "@types/chrome": "^0.0.46",
     "@types/node": "^7.0.12",
