--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package-chrome": "cd chrome/; cp ../LICENSE ./; zip -r ../chrome.zip ./; rm LICENSE; cd ../",
     "package-safari": "cd octohint.safariextension/; cp ../LICENSE ./; zip -r ../octohint.safariextension.zip ./; rm LICENSE; cd ../",
     "package": "npm run package-chrome && npm run package-safari",
-    "test": "tslint src"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -46,7 +46,6 @@
     "source-map-loader": "^0.2.1",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.17.0",
-    "tslint": "^5.1.0",
     "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-merge": "^4.1.0"
