--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package-chrome": "cd chrome/; cp ../LICENSE ./; zip -r ../chrome.zip ./; rm LICENSE; cd ../",
     "package-safari": "cd octohint.safariextension/; cp ../LICENSE ./; zip -r ../octohint.safariextension.zip ./; rm LICENSE; cd ../",
     "package": "npm run package-chrome && npm run package-safari",
-    "fix": "prettier --write --no-semi --single-quote --trailing-comma es5 src/**/*.{ts,tsx}",
+    "fix": "prettier --write --no-semi --single-quote --trailing-comma es5 src/**/*.{ts,tsx} webpack.*.js",
     "test": ""
   },
   "pre-commit": [
