--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@types/safari-extension": "^0.0.27",
     "@types/safari-extension-content": "^0.0.14",
     "github-injection": "^0.3.0",
+    "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "preact": "^8.1.0",
     "raven-js": "^3.14.0",
-    "typescript": "^2.4.2",
+    "typescript": "2.4.2",
     "vscode-css-languageservice": "^2.0.0",
     "vscode-html-languageservice": "^2.0.1",
     "vscode-json-languageservice": "^2.0.7",
@@ -48,7 +49,7 @@
     "css-loader": "^0.28.0",
     "html-webpack-plugin": "^2.30.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.5.3",
+    "prettier": "^1.6.1",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.1",
     "string-replace-webpack-plugin": "^0.1.3",
