--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.6.0",
   "description": "IntelliSense hint for GitHub",
   "scripts": {
-    "start": "webpack -w",
+    "dev": "webpack -w",
+    "dev:safari": "TARGET=safari webpack -w",
     "build": "webpack --config webpack.config.production.js",
-    "build-safari": "cp -r chrome/dist octohint.safariextension",
-    "package-chrome": "cd chrome/; cp ../LICENSE ./; zip -r ../chrome.zip ./; rm LICENSE; cd ../",
-    "package-safari": "cd octohint.safariextension/; cp ../LICENSE ./; zip -r ../octohint.safariextension.zip ./; rm LICENSE; cd ../",
-    "package": "npm run package-chrome && npm run package-safari",
+    "build:safari": "TARGET=safari webpack --config webpack.config.production.js",
+    "package": "cd chrome; cp ../LICENSE .; zip -r ../chrome.zip .; rm LICENSE; cd ..",
+    "package:safari": "cd octohint.safariextension; cp ../LICENSE .; zip -r ../octohint.safariextension.zip .; rm LICENSE; cd ..",
     "fix": "tslint --fix 'src/**/*.{ts,tsx}'",
     "test": "tslint src/**/*.ts"
   },
@@ -58,7 +58,7 @@
     "tslint": "^5.6.0",
     "tslint-config-prettier": "^1.3.0",
     "tslint-plugin-prettier": "^1.0.0",
-    "webpack": "^2.4.1",
+    "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-merge": "^4.1.0"
   }
