--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/safari-extension-content": "^0.0.14",
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
+    "path-browserify": "^0.0.0",
     "preact": "^8.1.0",
     "raven-js": "^3.14.0",
     "typescript": "2.4.2",
@@ -49,7 +50,6 @@
     "css-loader": "^0.28.0",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
-    "node-fetch": "^1.7.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.6.1",
     "raw-loader": "^0.5.1",
