--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "package:safari": "cd octohint.safariextension; cp ../LICENSE .; zip -r ../octohint.safariextension.zip .; rm LICENSE; cd ..",
     "fix": "tslint --fix 'src/**/*.{ts,tsx}'",
     "test": "tslint src/**/*.ts",
-    "get-node-libs": "node scripts/get-node-libs"
+    "get-node-libs": "node scripts/get-node-libs",
+    "icon": "rm -rf chrome/icons/*; node scripts/generate-icons"
   },
   "pre-commit": [
     "fix"
@@ -54,6 +55,7 @@
     "source-map-loader": "^0.2.3",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.19.0",
+    "svg2png": "^4.1.1",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-plugin-prettier": "^1.3.0",
