--- a/package.json
+++ b/package.json
@@ -20,40 +20,38 @@
     "url": "git+https://github.com/pd4d10/octohint.git"
   },
   "keywords": [],
-  "author": "pd4d10 <pd4d10@gmail.com>",
+  "author": "Rongjian Zhang <pd4d10@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/pd4d10/octohint/issues"
   },
   "homepage": "https://github.com/pd4d10/octohint",
   "dependencies": {
-    "@types/chrome": "^0.0.55",
+    "@types/chrome": "^0.0.71",
     "@types/lodash": "^4.14.88",
-    "@types/node": "^8.0.57",
+    "@types/node": "^10.5.5",
     "@types/safari-extension": "^0.0.27",
     "@types/safari-extension-content": "^0.0.14",
     "editorconfig": "^0.15.0",
     "lodash": "^4.17.4",
-    "path-browserify": "^0.0.0",
+    "path-browserify": "^1.0.0",
     "preact": "^8.2.6",
-    "typescript": "^2.7.2",
+    "typescript": "^3.0.1",
     "vscode-css-languageservice": "^3.0.2",
     "vscode-languageserver-types": "^3.5.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.4.1",
+    "awesome-typescript-loader": "^5.2.0",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "html-webpack-plugin": "^2.30.1",
-    "json-loader": "^0.5.7",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.3",
     "string-replace-webpack-plugin": "^0.1.3",
-    "style-loader": "^0.19.0",
-    "svg2png": "^4.1.1",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
-    "webpack": "^3.10.0",
+    "webpack": "^4.16.3",
     "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-command": "^0.4.1"
   }
 }
