--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -8,7 +8,8 @@
     "128": "icons/logo.png"
   },
   "background": {
-    "scripts": ["dist/ts-lib.js", "dist/background.js"]
+    "scripts": ["dist/ts-lib.js", "dist/background.js"],
+    "persistent": false
   },
   "permissions": [
     "https://github.com/*",
