refactor: tree shaking

--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "homepage": "https://github.com/pd4d10/octohint",
   "dependencies": {
     "@types/chrome": "^0.0.71",
-    "@types/lodash": "^4.14.88",
+    "@types/lodash-es": "^4.17.1",
     "@types/node": "^10.9.4",
     "@types/safari-extension": "^0.0.27",
     "@types/safari-extension-content": "^0.0.14",
     "editorconfig": "^0.15.0",
-    "lodash": "^4.17.4",
+    "lodash-es": "^4.17.11",
     "path-browserify": "^1.0.0",
     "preact": "^8.2.6",
     "typescript": "^3.0.1",
