--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-chrome/dist
-octohint.safariextension/dist
+chrome/dist/
+chrome/LICENSE
+octohint.safariextension/dist/
+octohint.safariextension/LICENSE
