--- a/package.json
+++ b/package.json
@@ -37,15 +37,13 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.3",
     "string-replace-webpack-plugin": "^0.1.3",
-    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.16.3",
     "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-command": "^0.4.1"
+    "webpack-cli": "^3.1.2"
   }
 }
