build: webpack.config.js -> ts to get type checking

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ chrome/dist/
 chrome/LICENSE
 octohint.safariextension/dist/
 octohint.safariextension/LICENSE
+webpack.config.js
+webpack.config.production.js
