--- a/src/safari/background/tsconfig.json
+++ b/src/safari/background/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../../../tsconfig",
   "include": ["."],
   "compilerOptions": {
     "types": ["safari-extension-content"]
