--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/clean-webpack-plugin": "^0.1.2",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/string-replace-webpack-plugin": "^0.1.0",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.17",
     "@types/webpack-bundle-analyzer": "^2.13.0",
