fix: wrong folder of safari background and content script

--- a/src/safari/background/tsconfig.json
+++ b/src/safari/background/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "../../../tsconfig",
   "include": ["."],
   "compilerOptions": {
-    "types": ["safari-extension-content"]
+    "types": ["safari-extension"]
   }
 }
