--- a/package.json
+++ b/package.json
@@ -10,17 +10,9 @@
     "test": "echo test",
     "icon": "rm -rf chrome/icons/*; node scripts/generate-icons"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pd4d10/octohint.git"
-  },
-  "keywords": [],
+  "repository": "pd4d10/octohint",
   "author": "Rongjian Zhang <pd4d10@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pd4d10/octohint/issues"
-  },
-  "homepage": "https://github.com/pd4d10/octohint",
   "dependencies": {
     "@types/chrome": "^0.0.74",
     "@types/lodash-es": "^4.17.1",
@@ -28,7 +20,6 @@
     "@types/safari-extension": "^0.0.27",
     "@types/safari-extension-content": "^0.0.14",
     "lodash-es": "^4.17.11",
-    "path-browserify": "^1.0.0",
     "preact": "^8.3.1",
     "typescript": "^3.1.3",
     "vscode-css-languageservice": "^3.0.2",
