--- a/src/chrome/tsconfig.json
+++ b/src/chrome/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "../../tsconfig",
   "include": ["."],
   "compilerOptions": {
-    "types": ["chrome"]
+    "types": ["chrome", "node"]
   }
 }
