--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:safari": "webpack --config webpack.config.safari.js",
     "build": "webpack --config webpack.config.production.js",
     "package": "cp LICENSE chrome/ && cp LICENSE octohint.safariextension/ && cd chrome/ && zip --exclude .DS_Store -r ../chrome.zip *",
-    "test": "npx prettier src/**/*.{ts,tsx}",
+    "test": "npx prettier --list-different src/**/*.{ts,tsx}",
     "icon": "rm -rf chrome/icons/*; node scripts/generate-icons"
   },
   "repository": "pd4d10/octohint",
