--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["src/safari"],
   "compilerOptions": {
     /* Basic Options */
+    "resolveJsonModule": true,
     "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
     "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "lib": ["dom", "esnext"] /* Specify library files to be included in the compilation. */,
