--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/safari-extension-content": "^0.0.14",
     "lodash-es": "^4.17.11",
     "preact": "^8.4.2",
+    "preact-portal": "^1.1.3",
     "typescript": "^3.2.2",
     "vscode-css-languageservice": "^3.0.12",
     "vscode-languageserver-types": "^3.5.0"
