--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash-es": "^4.17.14",
     "preact": "^10.0.0",
     "preact-portal": "^1.1.3",
+    "tsdef": "^0.0.13",
     "typescript": "^3.2.2",
     "vscode-css-languageservice": "^3.0.12",
     "vscode-languageserver-types": "^3.5.0"
