--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "@types/lodash-es": "^4.17.1",
     "@types/node": "^10.12.12",
     "lodash-es": "^4.17.14",
-    "preact": "^10.0.0",
-    "preact-portal": "^1.1.3",
-    "tsdef": "^0.0.13",
     "typescript": "^3.2.2",
     "vscode-css-languageservice": "^3.0.12",
     "vscode-languageserver-types": "^3.5.0",
@@ -29,6 +26,8 @@
     "raw-loader": "^1.0.0",
     "source-map-loader": "^0.2.3",
     "string-replace-webpack-plugin": "^0.1.3",
+    "svelte": "^3.20.1",
+    "svelte-loader": "^2.13.6",
     "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2"
