chore: rename prettier check to lint

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: test
+name: lint
 on: [push]
 jobs:
   build:
@@ -6,6 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
-      - run: |
-          npm install
-          npm test
+      - run: yarn && yarn lint
