Mention `activeTab` in manifest.json to enable Firefox support
This will have to be justified when submitting to the Chrome Store:

> This permission is used when the user explicitly requests adding the current domain to the permission list.

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -17,7 +17,8 @@
     "https://gitlab.com/*",
     "https://bitbucket.org/*",
     "storage",
-    "contextMenus"
+    "contextMenus",
+		"activeTab"
   ],
   "optional_permissions": ["<all_urls>"],
   "browser_action": {
