--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/lodash-es": "^4.17.1",
     "@types/node": "^13.11.0",
     "lodash-es": "^4.17.14",
+    "preact": "^10.0.0",
+    "preact-portal": "^1.1.3",
+    "tsdef": "^0.0.13",
     "typescript": "^3.8.3",
     "vscode-css-languageservice": "^4.1.1",
     "vscode-languageserver-types": "^3.15.1",
@@ -25,8 +28,6 @@
     "raw-loader": "^4.0.0",
     "source-map-loader": "^0.2.3",
     "string-replace-webpack-plugin": "^0.1.3",
-    "svelte": "^3.20.1",
-    "svelte-loader": "^2.13.6",
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11"
