--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
     "icon": "rm -rf chrome/icons/*; node scripts/generate-icons"
   },
   "dependencies": {
-    "@types/chrome": "^0.0.103",
+    "@types/chrome": "^0.0.123",
     "@types/lodash-es": "^4.17.1",
-    "@types/node": "^13.11.0",
+    "@types/node": "^14.11.2",
     "lodash-es": "^4.17.14",
     "preact": "^10.0.0",
     "preact-portal": "^1.1.3",
-    "tsdef": "^0.0.13",
-    "typescript": "^3.8.3",
+    "tsdef": "^0.0.14",
     "vscode-css-languageservice": "^4.1.1",
     "vscode-languageserver-types": "^3.15.1",
     "webext-domain-permission-toggle": "^1.0.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "raw-loader": "^4.0.0",
-    "source-map-loader": "^0.2.3",
-    "string-replace-webpack-plugin": "^0.1.3",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11"
