--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,7 +13,6 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*/*",
         "https://github.com/*",
         "https://gist.github.com/*",
         "https://gitlab.com/*",
@@ -21,5 +20,8 @@
       ],
       "js": ["dist/content-script.js"]
     }
-  ]
+  ],
+  "options_ui": {
+    "page": "dist/options.html"
+  }
 }
