--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.3.2",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
