--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "private": true,
   "scripts": {
     "start": "webpack",
-    "start:safari": "webpack --config webpack.config.safari.js",
     "build": "webpack --config webpack.config.production.js",
-    "package": "cp LICENSE chrome/ && cp LICENSE octohint.safariextension/ && cd chrome/ && zip --exclude .DS_Store -r ../chrome.zip *",
+    "package": "cp LICENSE chrome/ && cd chrome/ && zip --exclude .DS_Store -r ../chrome.zip *",
     "lint": "npx prettier --list-different src/**/*.{ts,tsx}",
     "icon": "rm -rf chrome/icons/*; node scripts/generate-icons"
   },
