--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/chrome": "^0.0.157",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^16.9.1",
+    "@typescript/vfs": "^1.3.4",
     "github-injection": "^1.0.1",
     "lodash-es": "^4.17.21",
     "path-browserify": "^1.0.1",
     "preact": "^10.5.14",
     "tsdef": "^0.0.14",
+    "typescript": "4.2.2",
     "vscode-css-languageservice": "^5.1.5",
     "vscode-languageserver-types": "^3.16.0"
   },
@@ -25,7 +27,6 @@
     "html-webpack-plugin": "^5.3.2",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
     "webpack": "^5.52.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0"
