feat: add permission toggle

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -22,6 +22,7 @@
       "js": ["dist/content-script.js"]
     }
   ],
+  "permissions": ["contextMenus"],
   "optional_permissions": ["<all_urls>"],
   "options_ui": {
     "chrome_style": true,
