--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ts-loader": "^9.2.5",
     "typescript": "4.2.2",
     "vscode-css-languageservice": "^5.1.5",
+    "webext-domain-permission-toggle": "^2.1.0",
+    "webext-dynamic-content-scripts": "^8.0.0",
     "webpack": "^5.52.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0"
