--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@bytemd/react": "^1.10.13",
+    "@swc/core": "^1.2.88",
     "@types/chrome": "^0.0.157",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^16.9.1",
@@ -19,8 +20,8 @@
     "lodash-es": "^4.17.21",
     "path-browserify": "^1.0.1",
     "preact": "^10.5.14",
-    "raw-loader": "^4.0.2",
-    "ts-loader": "^9.2.5",
+    "regenerator-runtime": "^0.13.9",
+    "swc-loader": "^0.1.15",
     "typescript": "4.2.2",
     "vscode-css-languageservice": "^5.1.5",
     "webpack": "^5.52.1",
