--- a/.swcrc
+++ b/.swcrc
@@ -6,8 +6,7 @@
     },
     "transform": {
       "react": {
-        "pragma": "h",
-        "pragmaFrag": "Fragment"
+        "runtime": "automatic"
       }
     }
   }
