--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/chrome": "^0.0.157",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^16.9.1",
+    "@types/react": "^17.0.22",
+    "@types/react-dom": "^17.0.9",
     "@typescript/vfs": "^1.3.4",
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
